question screens added + models + databinding

--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -9,7 +9,7 @@
     tools:context=".Level">
 
     <ImageView
-        android:id="@+id/backarrow"
+        android:id="@+id/backArrow"
         android:layout_width="50dp"
         android:layout_height="60dp"
         android:layout_marginLeft="10dp"
