--- a/app/src/main/res/drawable/wrongoption_background.xml
+++ b/app/src/main/res/drawable/wrongoption_background.xml
@@ -2,15 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke
-        android:width="5dp"
-        android:color="@color/white"/>
 
     <gradient
         android:type="linear"
         android:angle="45"
-        android:startColor="@color/white"
-        android:endColor="@color/bg_2" />
+        android:startColor="#A03030"
+        android:endColor="@color/bg_1" />
 
-    <corners android:radius="20dp" />
+    <corners android:radius="40dp" />
 </shape>
