--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -24,7 +24,10 @@
             type="String" />
 
     </data>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -58,7 +61,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:progress="1"
-                android:progressTint="@color/bg_1"
+                android:progressTint="@color/white"
                 android:progressBackgroundTint="@color/bg_2"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:indeterminate="false"
@@ -159,4 +162,5 @@
 
 
     </LinearLayout>
+</ScrollView>
 </layout>
